--- a/59-家政学．生活科学/595-理容．美容/595.5-化粧．美顔術/595.5-化粧．美顔術.md
+++ b/59-家政学．生活科学/595-理容．美容/595.5-化粧．美顔術/595.5-化粧．美顔術.md
@@ -8,6 +8,155 @@
 
 <!--
 アウトライン
-- 1.
-- 2.
+- 1. 化粧・美顔術とは何か：目的、技法、価値判断の変遷
+  - 1.1 装い・衛生・儀礼・医療の境界
+  - 1.2 素材（顔料・油脂・香料）と技法（塗布・染色・整肌）の基礎
+  - 1.3 「自然／人工」「健康／美」の二分法が生まれる背景
+- 2. 先史〜古代：顔を飾る行為の起源
+  - 2.1 身体装飾・呪術・身分表示としての化粧
+  - 2.2 エジプト・メソポタミア：鉱物顔料と眼の化粧（保護機能を含む）
+  - 2.3 ギリシア・ローマ：白粉・赤・香料と道徳批判
+  - 2.4 インド・西アジア・アフリカ：ヘナ、コール等の地域的多様性
+- 3. 東アジアと日本の古代〜中世：宮廷文化と信仰・医療知の交差
+  - 3.1 中国：粉黛文化、医書・薬学と美容
+  - 3.2 日本：平安期の白粉・紅、顔貌の規範と文学表象
+  - 3.3 僧侶・禁令・節制：化粧の是非をめぐる規範
+  - 3.4 原料供給（米粉・鉛白など）と流通
+- 4. 近世（16〜18世紀）：都市化・ファッション化と職人技
+  - 4.1 ヨーロッパ：白粉文化、香水、宮廷と市民社会
+  - 4.2 日本：江戸の化粧、紅・おしろい、出版物と流行
+  - 4.3 衛生観念の変化と皮膚トラブル（鉛・水銀など）への経験則
+  - 4.4 「美」の職能化：化粧品商・結髪・化粧指南の成立
+- 5. 19世紀：近代化・化学工業・流通革命
+  - 5.1 有機化学と合成染料：色彩の拡張
+  - 5.2 石けん・クリーム・乳化技術：スキンケアの工業化
+  - 5.3 近代日本：西洋化と化粧観、企業化（資生堂など）と広告
+  - 5.4 植民地・交易と原料（油脂・香料）のグローバル連関
+- 6. 20世紀前半：大衆化とメディア、戦争の影響
+  - 6.1 映画・雑誌・百貨店：化粧の標準化と新しい消費者像
+  - 6.2 科学的スキンケアの語り：肌診断・肌質分類の登場
+  - 6.3 戦時統制・物資不足と代用品、価値観の揺れ
+  - 6.4 職業と化粧：社会進出と規範（マナー化）の進行
+- 7. 戦後〜高度成長：生活文化としての化粧と美容教育
+  - 7.1 日本の復興と化粧品市場の拡大、訪問販売・チェーン化
+  - 7.2 美容部員・メイクアップアーティストの制度化と技能の可視化
+  - 7.3 皮膚科学・薬機制度との関係：医薬部外品・機能性訴求
+  - 7.4 日焼け対策・紫外線研究：サンスクリーンの普及
+- 8. 安全性・規制・倫理の歴史：トラブルから標準へ
+  - 8.1 有害成分・アレルギー事件と消費者運動
+  - 8.2 表示・成分開示・試験法（動物実験を含む）をめぐる国際的論争
+  - 8.3 「ナチュラル」「オーガニック」概念の制度化と批判
+  - 8.4 美容医療との境界とリスクコミュニケーション
+- 9. 21世紀前半：グローバル市場と多様化
+  - 9.1 東アジア潮流（K-beauty等）と相互影響、SNSによる拡散
+  - 9.2 メンズ化粧・ジェンダーニュートラル化の進行
+  - 9.3 インクルーシブ・ビューティ：色味展開、肌色・年齢・障害への配慮
+  - 9.4 高機能化：レチノイド・AHA/BHA・ペプチド等の一般化とエビデンス問題
+- 10. 現代：デジタル化・パーソナライズとサステナビリティ
+  - 10.1 インフルエンサー、レビュー経済、炎上と信頼形成
+  - 10.2 AR試着・AI肌解析・D2C：購買行動と技術基盤の変化
+  - 10.3 環境負荷（マイクロプラスチック、容器廃棄）と循環設計
+- 10.4 未来像：バイオ素材、規制強化、健康と美の再定義
 -->
+
+### 1. 化粧・美顔術とは何か：目的、技法、価値判断の変遷
+
+化粧や美顔術は、顔（とくに皮膚・目元・口元・眉・髪際）を対象に、色や質感、におい、形を操作して印象を変える実践の総称である。そこには「装い」としての審美的目的だけでなく、身分や所属を示す記号、儀礼や信仰に関わる身体操作、肌荒れや感染を避けるための衛生、さらには治療と隣接する皮膚ケアまでが重なってきた。近代以降の「美容＝私的な趣味」という理解は、歴史の長い時間軸の中では一部にすぎず、社会制度や宗教規範、医学知、流通と技術の組み合わせによって意味づけが揺れ動いてきた。
+
+技法の基礎は、(1) 顔料や粉体を付着させる（白粉・頬紅・アイシャドウ等）、(2) 染める（口紅・ヘナ等）、(3) 皮膚表面を整える（油脂・クリーム・乳化液・パック等）、(4) 毛を整える（眉・まつ毛・産毛処理等）に大別できる。素材側では鉱物（酸化鉄、雲母、鉛化合物など）、植物（紅花、樹脂、精油）、動物（ろう、脂肪）に加え、19世紀以降は合成色素や合成界面活性剤が中心に組み込まれた。こうした素材の変化は、化粧を「日常化」させる一方で、安全性の問題（毒性、刺激、アレルギー）や、労働・ジェンダー規範といった社会的問題を同時に増幅させることもあった。
+
+価値判断の面では、「自然／人工」「健康／美」「慎み／華美」といった対立軸が繰り返し立ち上がる。化粧はしばしば、支配層の贅沢や女性の虚栄として批判され、逆に礼節や自己管理の表現として推奨もされてきた。美顔術が医療と距離を取りながらも「科学」や「専門性」を参照して権威づけられていく過程は、化粧の歴史を語るうえで重要な主題となる。
+
+さらに、化粧は「道具」と「場」によっても規定される。鏡の普及、照明や室内環境の変化、携帯できる容器（コンパクト、チューブ、スティック）の登場は、化粧を特別な儀式から、移動や仕事と両立する日常行為へと押し広げた。逆に言えば、化粧がいつ・どこで・どの程度求められるかは、個人の好みだけでなく、都市生活の時間割や対人評価の制度（接客、就業規則、メディア表象）と連動してきた。
+
+### 2. 先史〜古代：顔を飾る行為の起源
+
+顔を飾る行為の起源は、化粧品産業よりはるか以前にさかのぼる。先史時代の赤色顔料（黄土や酸化鉄）は、狩猟採集社会において身体装飾や儀礼、集団の境界を示す記号として用いられたと考えられている。ここで重要なのは、顔の装飾が「美の追求」に限られない点である。戦いや狩り、通過儀礼、喪や祝祭など、社会的行為と結びついて顔が操作されることで、共同体の秩序や役割が可視化された。
+
+古代エジプトでは、眼の周囲を黒く縁取る化粧（コールに類する鉱物粉末の使用）が広く行われ、審美的効果に加えて、強い日差しへの対処や目の感染予防といった実利的説明も語られてきた。マラカイトなどの緑色顔料、香油や軟膏の使用も含め、宗教的観念（清浄や再生）と日常実践が絡み合う。メソポタミアでも香料・油脂・顔料が交易品として流通し、都市国家の階層社会の中で装飾が地位や富と結びついた。
+
+ギリシア・ローマ世界では、肌を白く見せる粉（鉛白を含みうる）や頬紅、香料が用いられた一方、化粧は道徳的に疑問視されることも多かった。風刺詩や道徳論は、化粧を欺瞞や奢侈と結びつけ、女性の身体をめぐる規範を強化する装置として働いた。これに対して、恋愛詩や手引書の形で化粧の技法が語られることもあり、実践と批判が同時に存在した点が特徴である。インドや西アジア、アフリカ各地でも、ヘナによる染色、香料、眼の化粧などが地域の宗教・気候・交易と結びつき、多様な系譜を形づくった。
+
+ただし、古代の化粧については、遺物（顔料、容器、鏡、パレット）や図像、限られた文献から復元する必要があり、用途や意味づけには幅がある。たとえば同じ鉱物粉末でも、装飾と医薬的利用が明確に分けられていたとは限らず、「美」と「保護」が未分化な形で共存していた可能性が高い。この曖昧さ自体が、化粧の歴史を一つの目的に回収できないことを示している。
+
+### 3. 東アジアと日本の古代〜中世：宮廷文化と信仰・医療知の交差
+
+東アジアでは、宮廷文化と都市文化の発展に伴い、化粧が洗練された様式として体系化されていく。中国では、粉黛（おしろいと眉・紅の組み合わせ）を中心に、季節や身分、場面に応じた化粧の規範が形成された。ここには、薬物学・本草学が整備される過程で、香料や油脂、鉱物粉末などが「身体に作用するもの」として説明される回路も含まれる。つまり美容の知識は、単なる流行ではなく、医療・養生の言説と往還しながら蓄積された。
+
+日本でも、古代から中世にかけて宮廷文化の中で化粧が定着した。平安期には白粉や紅が用いられ、眉の処理や歯を黒く染める習俗など、顔貌を社会的に「完成」させる作法が共有された。文学作品は当時の美意識を映し出し、肌の白さ、眉や口元のあり方、香の扱いなどをめぐって、身分・教養・性的魅力の評価が語られる。化粧は個人の嗜好というより、関係性の中で読まれる記号として機能した。
+
+一方で、信仰や倫理の側から化粧が問題視される局面もあった。仏教的な禁欲や「虚飾」批判は、世俗の華美を戒める言説として反復され、階層ごとに許容範囲が調整される。加えて、素材の供給と流通は常に制約要因である。米粉などの身近な素材、紅花由来の紅、鉱物系の白粉など、入手可能性と価格が化粧の普及範囲を決め、同時に「上品」「下品」といった評価軸を生みやすかった。中世に入ると武家社会の成立や都市の発展により、宮廷中心の様式は相対化され、化粧は地域・身分・職能によって多層化していく。
+
+### 4. 近世（16〜18世紀）：都市化・ファッション化と職人技
+
+近世ヨーロッパでは、宮廷文化が化粧の様式を強く牽引した。とりわけ16〜18世紀には、白い肌を理想化する傾向が強まり、鉛白（酢酸鉛など）を含む白粉が流行した。エリザベス1世の時代の「白さ」への執着は象徴的に語られ、フランス宮廷では香粉、頬紅、つけぼくろなどが社交の技法として洗練された。同時に、医師や道徳家が鉛や水銀の害、過度の化粧の不健康さを警告し、化粧は「魅力」と「危険」を抱えた実践として語られた。
+
+日本の近世、とくに江戸の都市文化では、化粧は遊里・芝居・町人文化の中で可視化され、化粧品商や職人の技術が発達した。紅や白粉は商品として流通し、化粧の情報は口伝に加えて出版物や図像（役者絵・美人画など）を通じて拡散した。化粧は流行と結びつく一方、年齢・既婚未婚・職業に応じた「してよい化粧／してはいけない化粧」が細かく区別され、規範の網が張られた。ここでも、化粧は個人の自由の象徴というより、社会関係の中で期待される演技の一部であった。
+
+この時期の「白さ」の理想は、単に審美の問題にとどまらず、階層・労働・日焼けの痕跡と結びつく。屋外労働に伴う肌の変化が下層の印として読まれやすい社会では、肌色の管理は階層秩序の再生産にもなりうる。化粧が常に差別や抑圧に直結するとは限らないが、何が「上品」「清潔」「だらしない」とされるかは社会構造を反映しやすく、化粧史は美意識史であると同時に社会史でもある。
+
+この時期に重要なのは、化粧が職能化していく点である。ヨーロッパでは理髪師や香水商、化粧品商が都市経済の一部として組み込まれ、日本でも紅屋・白粉屋といった商いが成立する。美顔術は「顔の手入れ」として、洗顔、油脂による保湿、香の使い方などの実践知を蓄積し、皮膚トラブルに対して経験則的な対処が編み出された。そうした知は、のちの近代的な皮膚科学や化粧品工業が成立する際の土台にもなった。
+
+### 5. 19世紀：近代化・化学工業・流通革命
+
+19世紀は、化粧・美顔術の歴史が「化学工業」と密接に結びつく転換点である。有機化学の発展と合成染料の登場は、色彩の選択肢を拡張し、同時に色の安定性や大量生産を可能にした。1856年にW.H.パーキンが合成染料（モーブ）を発見したことは、染色産業の革命として知られるが、のちに化粧品の着色技術にも間接的に影響を及ぼした。粉体の精製、粒子の均一化、香料の調合といった工程が工業化され、化粧は家庭内の手作りから、ブランドと製品群を中心とする消費へと重心を移していく。
+
+スキンケア領域でも、石けんの大量生産、クリームや乳液の乳化技術の洗練が進み、「肌を洗う／整える」行為が商品化された。これにより、美顔術は「技法」だけでなく「製品の組み合わせ」として設計されるようになる。流通面では、新聞・雑誌広告、郵便制度、百貨店や薬局の発展が、化粧品の販売と情報伝達の回路を作り替えた。
+
+同時に、近代の広告は化粧を「個人の改善プロジェクト」として語る傾向を強めた。シミやそばかす、体臭といった身体の特徴が「矯正すべき欠点」として名指され、理想像（清潔、若々しさ、上品さ）が製品の購入によって達成できるかのように表象される。化粧は自己肯定を支える道具にもなりうる一方で、不安を資源化する装置にもなりうるという二面性が、ここでより明確になる。
+
+日本では明治期の近代化の中で、西洋化粧の導入と、それに対する受容・抵抗が並行した。1872年創業の資生堂は、洋風調剤の薬局として出発し、やがて化粧品事業を展開する。化粧は「文明開化」や都市生活と結びつく一方、従来の化粧観（白粉、紅、香）や身分的作法との摩擦も生んだ。19世紀の化粧史は、技術革新そのものよりも、技術を正当化する言葉（衛生、科学、近代性）と、消費者の身体感覚が再編されていく過程として理解できる。
+
+### 6. 20世紀前半：大衆化とメディア、戦争の影響
+
+20世紀前半、化粧は映画・写真・雑誌といった視覚メディアの発展により、かつてない速度で大衆化した。スクリーン上のスターの顔は、照明とフィルムの特性に合わせた化粧技法を必要とし、舞台化粧や写真用化粧の知識が一般の美意識にも波及した。米国ではマックス・ファクターに代表されるメイクアップの商業化が進み、「理想的な顔」の設計が商品とサービスの形で提供されるようになった。百貨店の化粧品売り場、カウンセリング、実演販売は、化粧を「教わるもの」「選び取るもの」として制度化する装置になった。
+
+メディアの発展は、製品形態そのものも変えた。口紅をスティックとして携帯できる容器、粉を密閉して持ち歩けるコンパクト、マスカラやファンデーションの道具化は、化粧を家庭内の化粧台だけで完結させず、外出先での「直し」を前提にする。写真や映画が再現する肌や陰影に合わせて、下地・粉・色の組み合わせが語られ、化粧は「見られ方の技術」として商品と教育を伴って拡張した。
+
+同時期に広がったのが、化粧を「科学的」に語る枠組みである。肌質（乾燥・脂性など）の分類、皮膚の水分・油分という説明、衛生的洗顔の推奨は、消費者にとっては合理的な指針として魅力的であった一方、しばしば単純化された説明や誇張された効能とも隣り合わせだった。ここに、化粧品が医療の言葉を借りて信頼を獲得する構造が生まれる。
+
+戦争は化粧の実践と産業に直接的な影響を与えた。物資統制や原料不足は製品の供給を減らし、代用品や簡略化したケアが広がる。価値観の面でも、贅沢の抑制や勤労・節制の規範が強まり、化粧は一時的に否定されやすくなる。他方で、士気の維持や社会的役割（接客・公務など）に関連して、一定の化粧が「身だしなみ」として位置づけられる局面もあり、化粧は政治や労働倫理とも結びついて揺れ動いた。
+
+### 7. 戦後〜高度成長：生活文化としての化粧と美容教育
+
+戦後の復興期から高度成長期にかけて、化粧は生活文化として再編され、市場規模と裾野が拡大した。日本では都市化と所得の上昇、女性の社会参加、家庭用電化製品の普及などが、日常の時間配分や「身だしなみ」規範を変え、化粧がルーティンとして組み込まれていく。販売形態も多様化し、店頭カウンセリングに加えて訪問販売やチェーン化が進み、化粧は「買う場所」「教わる場所」を持つ行為になった。
+
+この時期の日本では、日焼け対策の普及と並行して、肌の明るさを価値づける言説も強まりやすかった。肌色の理想化は、当人の自己評価や生活実感に結びつく一方で、他者評価の圧力や、色の序列化（いわゆる色彩による偏見）と接続しうるため、単純に「流行」として片づけにくい。美顔術の歴史を描く際には、肌のケアが健康に資する側面と、規範が人を縛る側面の両方を見ておく必要がある。
+
+この時期に制度化が進んだのが、美容部員やメイクアップアーティストといった専門職の役割である。色の選択や塗布技術が可視化され、「正しい手順」「似合う色」という語りが普及することで、個人の好みは一定の標準に接続された。美容教育の場では、衛生管理や皮膚知識が重視され、化粧は趣味と技能の両面を持つ領域として整備される。
+
+また、皮膚科学や薬事制度との関係が整理され、化粧品と医薬品（あるいはその中間に位置づけられる製品）の境界が社会的に意識されるようになる。効能の訴求が強まるほど、科学的根拠の提示、試験法、表示の整備が必要になり、行政・業界・消費者の交渉が起こる。紫外線の影響に関する研究が一般化し、日焼け止めが「季節商品」から「年間ケア」へと位置づけを変えていくのも、この流れの中で理解できる。
+
+### 8. 安全性・規制・倫理の歴史：トラブルから標準へ
+
+化粧・美顔術の歴史には、望ましい効果だけでなく、望ましくない作用が繰り返し現れる。鉛や水銀などの有害物質を含む白粉、刺激の強い漂白剤、粗悪な香料や防腐剤による皮膚炎などは、近世から近代にかけて問題化してきた。近代以降、製品が大量生産され、流通範囲が広がるほど、事故は個別の逸話ではなく、統計と制度の対象になる。消費者運動や医療現場からの報告は、試験法や規制の整備を促し、表示や成分管理、製造工程の標準化が進む契機となった。
+
+規制の歴史では、「何をどこまで表示するか」「どの程度の根拠で効能を語ってよいか」が中心的争点になる。成分名の統一、アレルゲンや香料の扱い、保存料や紫外線吸収剤の安全性評価などは、国や地域で基準が異なり、国際取引の拡大とともに調整が必要になった。試験法をめぐっては動物実験の是非が大きな論争となり、代替法の開発や規制の変更が倫理的課題として浮上する。
+
+制度の節目としては、米国で1938年に連邦食品・医薬品・化粧品法が制定され、化粧品を含む製品安全の枠組みが整えられたこと、日本では1960年に薬事法が成立し、のちに制度名称や枠組みが更新されながら、化粧品と医薬品の境界管理が続いてきたことが挙げられる。欧州でも1970年代以降、統一的な規制枠組みが整備され、表示や安全性評価の標準化が進んだ。こうした標準化は産業の発展を後押しする一方、越境ECや個人輸入、手作り品の流通など、新しい流通形態に制度が追いつきにくい局面も生んでいる。
+
+表示の整備は、消費者の「読み取る力」も要請する。成分名の羅列は透明性を高めるが、専門知がないと有害性や適合性を直ちに判断できるわけではなく、「成分だけで善悪を決める」単純化も起こりうる。香料や防腐剤、紫外線防御成分などは、必要性（保存性や安全性）とリスク（刺激や感作）の両方を持つため、情報公開とともに、誇張された恐怖や過剰な安心の双方を抑える説明が求められてきた。
+
+「ナチュラル」「オーガニック」もまた、安全と倫理をめぐる言葉として普及したが、自然由来であっても刺激やアレルギーが起こりうる点、概念がマーケティングに利用されやすい点など、単純な善悪では語れない。さらに美容医療（ケミカルピーリング、注入、レーザー等）との境界が曖昧になるほど、自己判断の難しさとリスクコミュニケーションの重要性が増し、「美顔術」が担う範囲は社会的合意のもとで更新され続けている。
+
+### 9. 21世紀前半：グローバル市場と多様化
+
+21世紀に入ると、化粧・美顔術はグローバル市場の統合とデジタルメディアの発展により、潮流の移動が加速した。東アジアでは、韓国発の製品・技法（BBクリーム、クッションファンデーションなど）が国境を越えて普及し、日本の市場や習慣にも影響を与えた。こうした動きは一方向ではなく、製造、原料、研究、広告表現が相互参照され、地域的特徴（薄づき、ツヤ、保湿重視など）が再編集されていく過程として捉えられる。
+
+越境的な流通が拡大すると、正規品と模倣品の混在、並行輸入、成分表示や基準の読み替えといった問題も表面化する。SNSで流行が加速するほど、短期間で大量の製品が消費され、十分な安全情報や使用上の注意が共有されないまま拡散することも起こりうる。グローバル化は選択肢を増やすが、同時に「情報の非対称性」を増やすという点で、美顔術の新しい課題を作り出している。
+
+ジェンダー規範の変化も大きい。男性のスキンケアやメイクが市場として拡大し、職場や学校、SNSの場で受容の範囲が揺れ動く。化粧は自己表現であると同時に、依然として「するべき／しないべき」をめぐる圧力の対象にもなりうるため、自由化と規範化が同時進行する。近年の「ジェンダーニュートラル」な商品設計や広告表現は、この緊張関係を背景に生まれている。
+
+インクルーシブ・ビューティ（肌色や年齢、障害の多様性を前提にした設計）も、化粧史の新しい節目である。従来、標準から外れた肌色や顔立ちが市場で十分に扱われなかったことへの反省から、色味展開の拡張や、撮影・照明・色再現の見直しが進んだ。機能性の面では、レチノール、AHA/BHA、ナイアシンアミド、各種ペプチドなどの成分が一般語彙化し、消費者が「成分で選ぶ」傾向が強まったが、過度な重ね塗りによる刺激や、エビデンスの乏しい主張の拡散といった副作用も生んでいる。
+
+### 10. 現代：デジタル化・パーソナライズとサステナビリティ
+
+現在の化粧・美顔術は、SNSとレビュー経済のもとで、知識と評価の流通様式が大きく変わった。インフルエンサーの発信は学習コストを下げる一方、広告と経験談の境界を曖昧にし、炎上や誤情報の拡散も起こりうる。信頼は「ブランドの権威」だけでなく、透明性（提供表示、成分説明、検証方法）やコミュニティの合意によって形成される傾向が強まり、企業側には説明責任がより強く求められる。
+
+技術面では、ARによるバーチャル試着、AIによる肌解析、オンラインカウンセリング、D2C（直販）の拡大が、購買行動と美容教育の回路を再構成した。個別最適化は利便性を高める一方、診断ロジックのブラックボックス化、データの取り扱い、画面上の色再現の限界といった問題を伴う。パーソナライズが進むほど、何を「個人差」とし、どこを「健康上の注意」として扱うかの線引きが重要になる。
+
+加えて、デジタル技術は中立ではない。学習データや撮影条件の偏りがあると、肌色や年齢によって診断精度や色合わせが不均等になり、結果として特定の利用者に不利な推奨が生まれうる。顔のデータは個人情報としてもセンシティブであり、利便性と引き換えに何が収集・保存・共有されるのかが見えにくい場合、信頼は損なわれやすい。現代の美顔術は、化粧品の品質だけでなく、データと説明の品質も問われる段階に入っている。
+
+サステナビリティも避けて通れない主題である。容器包装の廃棄、マイクロプラスチックを含む懸念、原料調達（油脂・香料の供給網）と生態系への影響は、化粧の「快適さ」を支える外部コストとして可視化されつつある。リフィルや簡易包装、代替素材の導入は進むが、保存性や安全性、使用感とのトレードオフがあり、単純な解決策はない。今後は、発酵やバイオ由来原料などの新素材、規制の強化、そして「健康と美」をどう再定義するかという文化的議論が重なりながら、化粧・美顔術は更新され続けるだろう。
+
+その一方で、化粧の社会的要請をどう扱うかという問題も続く。化粧は自己表現やケアの手段になりうるが、場によっては「して当然」とされ、しない選択が不利益につながることがある。デジタル化が進むほど顔の露出機会（オンライン会議、写真共有）が増え、外見管理の負担が強まる側面もある。現代の化粧史は、技術や市場の拡大史であると同時に、身体の自由と社会的期待の交渉史としても読まれる。
