391の分野の歴史を追加

--- a/3-社会科学/39-国防．軍事/391-戦争．戦略．戦術/391-戦争．戦略．戦術.md
+++ b/3-社会科学/39-国防．軍事/391-戦争．戦略．戦術/391-戦争．戦略．戦術.md
@@ -13,6 +13,158 @@
 
 <!--
 アウトライン
-- 1.
-- 2.
+- 1. 概念の成立：戦争・戦略・戦術を区別する語彙（古代〜近世）
+  - 1.1 兵法・軍事思想の古典：規範（あるべき）と経験（起きた）の混在
+  - 1.2 国家形成と軍事の専門化：指揮系統・規律・訓練が理論化を促す
+  - 1.3 戦争目的と手段の関係：政治目的と軍事行為を結ぶ発想の萌芽
+- 2. 近世の制度化と技術：常備軍・要塞・補給が「戦い方」を変える（16〜18世紀）
+  - 2.1 火器と築城術の発展がもたらした攻囲戦／防衛の体系化
+  - 2.2 地図製作・測量・軍事行政の整備と、参謀的機能の発達
+  - 2.3 海上覇権と通商：戦域が地理・経済と結びつく過程
+- 3. 近代の理論化：戦争を「国家の道具」として記述する枠組み（19世紀）
+  - 3.1 戦争目的・政策・不確実性（摩擦）を扱う戦争理論の体系化
+  - 3.2 士官学校・参謀本部の成立と、作戦計画の標準化・専門職化
+  - 3.3 戦史の教材化：事例から「教訓」を抽出する方法の定着と限界
+- 4. 産業化と国民国家：動員・兵站・通信が総力戦の条件を整える（19世紀後半〜第一次大戦）
+  - 4.1 鉄道・電信・大量生産が作戦規模と指揮の速度を変える
+  - 4.2 塹壕戦と火力優越：戦術革新（浸透、砲兵協同など）の試行錯誤
+  - 4.3 戦争規制の発展：捕虜・占領・封鎖などをめぐる国際法と実態の乖離
+- 5. 戦間期のドクトリン競争：機甲・航空・海軍戦略が再編される（1919〜1939）
+  - 5.1 機動戦・縦深打撃の構想と、組織・教育・装備の整合問題
+  - 5.2 戦略爆撃と防空：民間人被害をどう位置づけるかという論争
+  - 5.3 制海権・通商破壊・潜水艦戦：海上戦略の理論と政治目的の結合
+- 6. 第二次世界大戦：統合戦・生産力・情報が勝敗を左右する（1939〜1945）
+  - 6.1 連合作戦と兵站：上陸・機動・補給が一体化する戦い方
+  - 6.2 情報・暗号・偵察：意思決定を支える情報優越と誤認の影響
+  - 6.3 占領統治と抵抗：軍政・宣撫・ゲリラ対応が戦略課題になる
+- 7. 核時代の戦略研究：抑止・危機管理・限定戦の理論（1945〜冷戦末期）
+  - 7.1 核抑止とエスカレーション：合理性モデル（ゲーム理論等）と現実のズレ
+  - 7.2 代理戦争と反乱：正規戦中心の理論が直面した適用限界
+  - 7.3 文民統制と専門知：軍事研究機関・大学・シンクタンクの役割の拡大
+- 8. ポスト冷戦の実戦経験と規範：介入・平和維持・対テロ（1990年代〜2010年代）
+  - 8.1 精密打撃とISRの普及が変えた作戦設計（同時に生む過信のリスク）
+  - 8.2 都市戦・非国家主体・民間人保護：戦術と法・倫理の緊張
+  - 8.3 占領・国家建設の難しさ：短期の軍事勝利と長期の政治成果の乖離
+- 9. 21世紀の戦争概念の拡張：サイバー／宇宙／認知領域（2010年代〜）
+  - 9.1 サイバー作戦とインフラ：帰属・抑止・比例性をめぐる新しい争点
+  - 9.2 無人化・AI支援：速度向上と誤作動・責任所在の問題
+  - 9.3 ハイブリッド戦・グレーゾーン：同盟、世論、国内政治が戦略要素化する
+- 10. 学問分野としての戦争・戦略・戦術：方法論と批判的視点
+  - 10.1 戦史・ケーススタディ・比較研究：一般化の利点と「教訓の誤用」の危険
+  - 10.2 定量分析・シミュレーション・ウォーゲーム：再現性と前提依存性のトレードオフ
+- 10.3 倫理と政治：正当化言説、民間人被害、戦争の回避可能性をめぐる検討
 -->
+
+### 1. 概念の成立：戦争・戦略・戦術を区別する語彙（古代〜近世）
+
+「戦争」をどう理解し、どう語るかは、戦争そのものの変化だけでなく、国家と社会が軍事をどう位置づけたかに左右されてきた。古代ギリシアでは、トゥキュディデスがペロポネソス戦争（紀元前431〜404年）を分析的に叙述し、偶然や恐怖、利害の計算が意思決定を歪める点を描いた。中国でも『孫子』（紀元前5〜4世紀頃と推定）のように、勝利を武勇ではなく計略・情報・心理に結びつける古典が早くから成立している。こうした古典は、現場の技法の記録であると同時に、君主や統治者に対する規範（どう戦うべきか）を含み、経験則と価値判断が混ざりやすい。
+
+戦略・戦術という区別も固定的ではなかった。語源的には、戦略は指揮官（strategos）に関わる技芸、戦術は隊列の運用（taktika）に関わる技芸として整理されやすいが、実際には戦争目的、戦力の整備、作戦の立案、戦場での指揮は連続している。ローマのウェゲティウス（4〜5世紀頃）の軍事書は訓練・規律・編制を重視し、軍事が「継続的に管理される制度」へ移る方向を示した。中世から近世にかけて、封建的な臨時動員から常備の兵力や官僚機構へ移るほど、軍事は専門職化し、抽象化された概念で語られやすくなる。
+
+戦争をめぐる「書くこと」の伝統も、多様な制度と文化に支えられてきた。東ローマ帝国ではマウリキウスの『ストラテギコン』（6世紀末〜7世紀初）やレオーン6世の軍事書（9〜10世紀）が、騎兵運用や行軍・補給を含む実務の知を整理した。東アジアでも、『六韜』『三略』といった兵書の伝統が政治倫理や統治論と重なり、軍事を統治の一部として扱う傾向を強めた。近世日本でも、宮本武蔵『五輪書』（1645年）や各流派の兵法書が、戦闘技術だけでなく心構えや組織の統率を論じたが、ここでも個人の経験と規範が混在しやすい点は共通する。
+
+また、戦争目的と手段の結びつきは、近世初期の政治思想や国際法思想とも絡む。たとえばグロティウス『戦争と平和の法』（1625年）は、国家間の紛争と武力の正当化を法の言葉で扱おうとした。一方で、こうした枠組みは現実の暴力を抑制する場合もあれば、逆に「合法性」の言説が戦争を正当化する資源として機能する場合もあった。概念の成立は、単に理解を進めただけでなく、政治と軍事の結び目を新しい形で作り替えていった。
+
+なお、日本語の「戦略」「戦術」という訳語は近代の軍事教育や翻訳を通じて定着していくが、訳語が整備される過程では、同じ語が政策論・作戦論・部隊運用のどこを指すのかが揺れた。概念を輸入することは、単に言葉を置き換えるのではなく、国家が軍事をどう分節化して管理するか（政策、作戦、教育、兵站、情報など）を再編する作業でもあった。
+
+### 2. 近世の制度化と技術：常備軍・要塞・補給が「戦い方」を変える（16〜18世紀）
+
+16〜18世紀のヨーロッパでは、火器の普及と築城術の発展が、戦争の中心を会戦だけでなく攻囲戦・防衛戦へ拡張した。いわゆる稜堡式要塞（trace italienne）は、砲兵と工兵を前提にした「時間を買う」防衛を可能にし、ヴォーバン（1633〜1707年）のような技術者が包囲・築城を体系化する。結果として、戦争は作戦の巧拙だけでなく、土木、測量、資材調達、兵站管理の能力に強く依存するようになった。
+
+常備軍の整備は、訓練と規律を標準化し、戦術を「再現可能な手順」に近づけた。グスタフ・アドルフ（在位1611〜1632年）が実施した火力と機動の統合、フリードリヒ2世（在位1740〜1786年）の線式戦術と訓練は、同時代の制度・財政の条件の上に成立している。近世の戦争はしばしば「限定戦」とも形容されるが、実態は地域社会への負担や略奪を伴い、国家が統制できる範囲にも限界があった。制度化は暴力を抑制する側面と、より持続的に行使できるようにする側面の両方を持つ。
+
+この時代の変化は、後世の研究では「軍事革命」としてまとめて語られることがある。たとえばマイケル・ロバーツ（1956年）やジェフリー・パーカー（1988年）は、戦術・要塞・財政・国家形成の相互作用を重視したが、その時期区分や因果関係は議論が分かれる。つまり、技術や編制の変化が国家を強めたのか、国家の財政・行政能力の増大が軍事変化を可能にしたのかは、一方向の説明では足りない。戦争・戦略・戦術の「歴史」は、出来事の連鎖だけでなく、後からそれをどう概念化したか（研究史）の層も含む。
+
+海上でも、制海権や通商の遮断が戦争目的と接続される。海戦は艦隊決戦だけではなく、護送、封鎖、植民地と補給拠点の確保を含む長期の競争になりやすい。戦域が広がるほど、地図製作や測量、航海術といった知の基盤が軍事の一部として組み込まれ、戦争は「戦場」だけで完結しない営為として理解されていく。
+
+### 3. 近代の理論化：戦争を「国家の道具」として記述する枠組み（19世紀）
+
+フランス革命戦争とナポレオン戦争（1792〜1815年）は、国民動員と大規模会戦を通じて、戦争の規模と速度を押し上げた。この経験を受けて、戦争を一般理論として把握しようとする試みが強まる。ジョミニ（1779〜1869年）は作戦線や決戦点などの概念で戦争を整理し、教育・教範に取り込みやすい形にした。他方、クラウゼヴィッツ（1780〜1831年）は『戦争論』（1832年刊）で、戦争を政治目的に従属する手段として位置づけつつ、摩擦・偶然・心理といった不確実性が理論を裏切ることも強調した。両者はしばしば対比されるが、実際の軍制や教育では、規範的な教訓と不確実性の認識が混在し続ける。
+
+理論化を支えたのは制度でもある。士官学校の整備や参謀組織の発達は、個々の天才的指揮官の経験を、組織知として蓄積する方向を後押しした。プロイセンでは一般参謀制度が19世紀に成熟し、モルトケ（1800〜1891年）は作戦計画と鉄道動員を結びつけ、指揮と参謀の分業を実務として確立した。一方で、計画が精緻になるほど、前提の崩壊に弱いという問題も生まれる。理論と制度は、戦争を理解しやすくする一方で、理解の枠が現実を押し込める危険も抱える。
+
+制度の移植も、戦略・戦術の理解を形づくった。明治期の日本では、徴兵制（1873年）や参謀本部（1878年）、陸軍大学校（1882年）などを通じて近代的な軍事教育と参謀制度が整備され、欧州の軍事理論や戦史研究が体系的に取り込まれた。ここで重要なのは、理論を「学ぶ」ことが、同時に組織の意思決定手順（計画作成、情報収集、演習、教範化）を導入することだった点である。用語や教範が整備されるほど、何が戦略で何が戦術かは一見明確になるが、現実には政治目的、資源制約、同盟関係などが介入し、切り分けはしばしば揺らぐ。
+
+戦史の教材化もこの時代に強まった。過去の会戦から「普遍的教訓」を抽出する方法は教育上有効だが、成功例の選択や事後合理化が入りやすい。どの事例を規範とし、どの失敗を偶然として片づけるかは、しばしばその時代の政治目標や組織文化と結びつく。戦争研究が「客観的叙述」だけでなく「将来の準備」として制度化されていく過程には、こうした緊張が常に伴った。
+
+### 4. 産業化と国民国家：動員・兵站・通信が総力戦の条件を整える（19世紀後半〜第一次大戦）
+
+19世紀後半、鉄道・電信・工業生産は、兵力の集中と補給を桁違いにした。アメリカ南北戦争（1861〜1865年）や普仏戦争（1870〜1871年）は、動員と輸送、補給線の維持が勝敗を左右することを示し、兵站は後方業務ではなく作戦の中心課題になっていく。国家が教育、戸籍、徴兵、税制を通じて社会を組織化するほど、戦争は社会全体の動員として現れる。
+
+この段階で、戦争は「前線の戦闘」だけでなく「後方の生産・輸送・世論管理」を含むものとして把握されるようになる。新聞や写真、のちには映画が戦争報道と宣伝に使われ、敵味方の道徳的評価が戦争継続の資源になった。動員の正当化は、国家の理念（民族、革命、帝国、防衛など）と結びつきやすく、戦略は純粋な軍事計算だけでは定義できなくなる。総力戦という言葉が後に普及する背景には、こうした「社会全体の戦争化」がある。
+
+第一次世界大戦（1914〜1918年）は、火力と防御の優位が機動を抑え、塹壕戦が長期化した。砲兵の集中運用、機関銃、鉄条網、毒ガスの使用は、突撃中心の戦術を破綻させ、浸透戦術（1917年頃の「フーティア戦術」として語られる）や砲兵観測の改良、戦車の導入（ソンムの戦いでの初投入は1916年）など、戦術革新が試行錯誤された。ここでの「革新」は、単発の新兵器ではなく、偵察・砲兵・歩兵・工兵の協同といった統合の問題として現れる。
+
+同時に、戦争を規制する国際的枠組みも整備された。ハーグ条約（1899年、1907年）やジュネーヴ諸条約（1864年以降）は、捕虜・傷病者・占領などに関する規範を提示したが、総力戦の現実はしばしばそれを超えた。規範の発達は戦争の残虐性を自動的に減らすとは限らず、規範と実態の乖離それ自体が政治・宣伝・報復の論理に組み込まれることもあった。
+
+さらに、海上封鎖や潜水艦戦は、軍事目標と民間生活の境界を曖昧にした。通商の遮断は兵站を断つ手段である一方、食料や生活必需品にも影響し、民間人の被害と結びつきやすい。こうした圧力が政治意思を変えるかどうかは一概には言えず、むしろ結束を強めることもある。戦略が「相手の意思」を対象にする以上、手段の選択は倫理だけでなく効果の不確実性とも向き合う必要がある。
+
+### 5. 戦間期のドクトリン競争：機甲・航空・海軍戦略が再編される（1919〜1939）
+
+戦間期は、第一次大戦の経験をどう解釈するかをめぐって、各国が異なるドクトリンを競い合った時代でもある。戦車と自動車化の可能性は、フラーやリデル・ハート、ソ連のトゥハチェフスキーらによって「機動」と「縦深」を重視する構想として語られたが、構想がそのまま戦果に結びつくわけではない。機械化は燃料・整備・通信・指揮の問題を同時に増大させ、組織・教育・装備の整合が取れない限り、逆に脆弱性を生む。
+
+また、第一次大戦後の社会は、戦争被害の記憶と経済危機を抱え、軍備の制約と再軍備の衝動の間で揺れた。フランスのマジノ線に象徴される防御重視の発想、ソ連の縦深作戦（ディープ・バトル）の理論化、ドイツの限定された枠内での機動運用の追求などは、地理・政治・条約制約という条件に強く規定される。スペイン内戦（1936〜1939年）では航空機と装甲部隊の運用が試され、ゲルニカ爆撃（1937年）が象徴するように、民間人被害が戦略議論の中で無視できない論点として浮上した。
+
+航空戦力をめぐっては、ドゥーエ『制空』（1921年）に象徴される戦略爆撃論が、都市と産業への打撃で戦争を短期に終わらせ得ると主張した。一方で、民間人被害をどう位置づけるか、爆撃の効果をどう測定するかは当初から争点であり、防空（レーダー、迎撃、分散、シェルター）との相互作用も大きかった。理論が政策を動かす局面がある一方、理論が前提とする技術成熟や情報精度が現実に追いつかない場合、期待が過大になる危険もある。
+
+海上では、マハン『海上権力史論』（1890年）やコーベット『海軍戦略の諸原則』（1911年）が、制海権と国家戦略を結びつける言語を提供した。潜水艦戦や通商破壊、封鎖の位置づけは、法と倫理も含む論点となり、ワシントン海軍軍縮条約（1922年）やロンドン海軍軍縮条約（1930年、1936年）は軍備だけでなく戦略環境も変えた。戦間期の「理論」は、技術の夢と制度の制約の間で形成されている。
+
+さらに、空母航空の発展は、海戦を「砲戦中心」から「航空による遠距離打撃中心」へ移す可能性を示し、艦隊運用や偵察の重心を変えた。条約が主力艦を制限することで相対的に空母の比重が高まった側面もあり、技術発展は政治的制度と相互作用する。戦略・戦術の歴史は、兵器の進歩だけでなく、それを採用・訓練・配備する政治と組織の選択の歴史でもある。
+
+### 6. 第二次世界大戦：統合戦・生産力・情報が勝敗を左右する（1939〜1945）
+
+第二次世界大戦では、陸海空の統合と生産力の差が、作戦の可能性を大きく規定した。電撃戦と呼ばれる初期の機動戦は、戦車だけでなく無線通信、航空支援、補給の連動を前提とし、統合が崩れると失速しやすい。上陸作戦では、ノルマンディー上陸（1944年）に見られるように、船舶・航空・工兵・兵站が一体となって初めて継戦が可能になる。ここでも「戦術」は単独ではなく、作戦と補給の設計に埋め込まれている。
+
+情報と偵察も決定的な要素となった。レーダーは防空と対潜の両方で戦い方を変え、暗号戦ではエニグマ解読に関わる「ウルトラ」などが作戦判断に影響した。ただし情報優越は万能ではなく、過信や解釈の誤り、組織内の伝達不全があれば、むしろ誤った確信を強める。欺瞞（たとえば「フォーティテュード作戦」）が成立するのも、敵の先入観と情報処理の癖を利用できるからであり、情報は技術だけでなく心理と組織に依存する。
+
+太平洋戦争では、距離と補給の制約が作戦の枠を決め、制海・制空の獲得が上陸や航空基地整備と不可分になった。ミッドウェー海戦（1942年）のように、索敵と暗号情報、航空運用が短時間で勝敗を左右する局面もあれば、島嶼での消耗戦や通商破壊が長期に効く局面もある。潜水艦戦は補給線に直接作用し、後方の生産と輸送を通じて前線の持久力を削る。ここでは「戦略」は会戦の勝利だけでなく、相手の再生産能力をどう低下させるかという問題として現れる。
+
+占領統治と抵抗運動も、戦略の一部として前景化した。占領地での軍政、資源徴発、治安維持は、抵抗やゲリラの誘発とも結びつき、後方を「平定」できない限り前線の作戦も不安定になる。民間人への攻撃を含む戦略爆撃（ロンドン大空襲、ドレスデン爆撃、東京大空襲など）や原子爆弾投下（1945年）は、軍事効果の議論と倫理・法の議論が切り分けにくい形で残り、戦争研究に長い影を落とした。
+
+原子爆弾投下をめぐっては、戦争終結の短縮、ソ連への示威、上陸による損害回避など複数の説明が提示され、単一の動機で整理しにくい。ここにあるのは、軍事的合理性の議論が政治的意図や倫理的評価と絡み合う典型である。戦略研究は、この絡み合いを単純化して「正解」を与えるより、どの前提を置くとどの結論に近づくかを明示し、説明の限界を示すことが求められるようになった。
+
+### 7. 核時代の戦略研究：抑止・危機管理・限定戦の理論（1945〜冷戦末期）
+
+1945年以降、核兵器は「勝つための戦争」より「起こさないための戦争」を中心に据え、戦略研究の語彙を変えた。ブロディら『絶対兵器』（1946年）が早期に示したように、核時代の中心概念は抑止であり、敵に「受け入れられない損害」を予期させることで攻撃を思いとどまらせる発想である。シェリング『紛争の戦略』（1960年）やカーン『熱核戦争について』（1960年）は、合理的行為者モデルやエスカレーションの分析を用いて危機管理を論じたが、合理性の前提が現実にどこまで成り立つかは常に問題になった。
+
+キューバ危機（1962年）のような核危機は、誤認や偶発、組織の手続きが破局を招き得ることを示し、危機管理やホットライン、軍備管理の議論を加速させた。SALT I（1972年）やINF全廃条約（1987年）などの軍備管理は、軍事技術だけでなく相互不信の下での検証・透明性という制度設計の問題でもあった。一方で、核抑止が機能しても、通常戦力や代理戦争が消えるわけではなく、限定戦・反乱・内戦への対応が重い課題として残る。
+
+核戦略の内部でも、都市への報復（カウンターバリュー）と軍事目標への先制・反撃（カウンターフォース）のどちらを重視するか、第二撃能力をどう確保するか（核三本柱、指揮統制の冗長化）などの議論が分岐した。「相互確証破壊」という語が示すように、抑止は相手の合理性だけでなく、誤認や偶発を抑える仕組みに依存するが、その仕組み自体が完全にはなり得ない。したがって核時代の戦略研究は、勝利条件を定義するより、破局の経路（エスカレーションの階段、事故、誤警報）を減らす管理論へ傾く場面が多い。
+
+冷戦期には、反乱やゲリラに関する理論も広がった。マオ沢東の人民戦争論、ガルーラ『反乱戦理論』（1964年）などは、正規戦中心の枠組みでは説明しにくい政治動員と治安の問題を扱ったが、これらも状況依存で、処方箋としての普遍性には限界がある。軍事研究が大学やシンクタンク、軍の研究機関（RANDなど）で制度化されるにつれ、専門知は増える一方、政策決定との距離、文民統制、説明責任の問題もまた大きくなっていった。
+
+文民統制をめぐる理論としては、ハンティントン『軍人と国家』（1957年）やジャノウィッツ『職業軍人』（1960年）が、軍の専門性と民主政治の関係を異なる形で整理した。戦略が高度に専門化するほど、政治指導者が内容を理解し切れないという問題が生じ、逆に軍が政治目的を過剰に軍事化して解釈する危険もある。核時代の戦略は、軍事計算だけでは閉じられず、統治の制度論と不可分になった。
+
+### 8. ポスト冷戦の実戦経験と規範：介入・平和維持・対テロ（1990年代〜2010年代）
+
+冷戦終結後、国家間大戦の可能性が相対的に低下した一方で、介入、平和維持、内戦対応、対テロ作戦が目立つようになる。湾岸戦争（1991年）は精密誘導兵器とISR（情報・監視・偵察）の効果を強く印象づけ、「技術が戦争を短期化する」という期待を生んだ。しかし、その後のソマリア（1993年）、ボスニア（1995年）、コソボ（1999年）などの経験は、軍事力が政治目的を自動的に達成しないこと、そして「介入しない」こともまた重大な帰結を持ち得ることを示した。
+
+この時期には「軍事における革命（RMA）」や「ネットワーク中心戦」といった言葉が流通し、センサーと精密打撃、指揮統制の統合が決定的優位を生むという見方が広がった。だが、技術優位がある側にも弱点はあり、長期の占領、治安維持、現地政治の調整といった課題は、通信や精密兵器だけでは解けない。技術が作戦の幅を広げることは確かでも、戦争の目的設定と終結、戦後秩序の構築は依然として政治の領域に残る。
+
+2001年以降の対テロと大規模な占領・安定化作戦は、戦略と戦術の関係を改めて難しくした。初期の軍事的勝利があっても、治安、統治、正統性、経済復興が伴わなければ、反乱や治安悪化が再燃し得る。対反乱作戦（COIN）は住民の支持と情報を重視するが、その実施は治安部隊の規律、腐敗、現地政治、民間人被害の管理に強く左右され、外部勢力が短期で制御できる範囲には限界がある。都市戦や非国家主体への対応は、軍事効率と法・倫理の緊張を日常的にする。
+
+国際規範の面では、国連憲章（1945年）の武力行使原則、ジュネーヴ諸条約（1949年）と追加議定書（1977年）、国際刑事裁判所を定めるローマ規程（1998年）などが、武力行使と責任追及の枠組みを拡張した。だが規範は統一的に適用されるとは限らず、政治的選択、解釈の争い、情報戦と結びつく。規範の発達は重要である一方、現実の運用は権力関係と制度能力に依存するという点も見落としにくい。
+
+対テロの枠組みでは、戦闘員と非戦闘員の区別、越境する武力行使、標的型攻撃の適法性など、従来の国家間戦争を前提とした整理が困難になる。これらは法解釈の問題であると同時に、敵対行為をどこまで「戦争」と見なすかという概念の問題でもある。戦略・戦術の歴史は、新しい現象が現れるたびに、既存の概念が十分かどうかを問い直してきた。
+
+### 9. 21世紀の戦争概念の拡張：サイバー／宇宙／認知領域（2010年代〜）
+
+21世紀に入ると、戦争の領域は物理的戦場だけでなく、サイバー空間、宇宙、情報環境へと拡張して理解される。エストニアへのサイバー攻撃（2007年）やスタックスネット（2010年）に代表される事例は、重要インフラや産業制御が武力衝突と連動し得ることを示した。サイバー作戦では、攻撃主体の帰属が難しく、抑止や報復の基準（比例性、必要性）を設定しにくい。結果として、平時と有事の境界が曖昧になり、低強度の競争が常態化する。
+
+宇宙領域でも、衛星測位（GPSなど）、通信、偵察が軍事の基盤インフラとなり、これを妨害・破壊する能力が戦略上の争点になる。宇宙条約（1967年）が示す法的枠組みがあっても、対衛星攻撃（2007年の中国による破壊実験など）やジャミング、サイバー侵入といった手段は多様で、抑止とエスカレーション管理の難しさが増す。宇宙は「遠い場所」ではなく、地上戦の指揮・補給・精密攻撃を支える接続点として、戦略と戦術を結びつける。
+
+無人化とAI支援も、作戦の速度と射程を変える。無人航空機による監視と精密打撃、徘徊型兵器の普及は、前線の感知から攻撃までの時間を短縮する一方、誤認や誤作動、目標選定の責任所在をめぐる問題を強める。AIは意思決定を自動化するというより、情報過多の環境で優先順位付けや予測を支援する形で導入されやすいが、学習データの偏りや敵の欺瞞に弱い可能性があり、「速さ」が必ずしも「正しさ」を保証しない。
+
+また、ハイブリッド戦やグレーゾーンと呼ばれる現象は、正規戦・非正規戦、軍事・非軍事、国内・国外の境界を横断する。武装勢力の匿名化、民間技術（商用衛星、SNS、民生ドローン）の軍事利用、世論操作や政治分断への介入は、戦略の重心を同盟や国内政治の耐久力へ移す。ここでは戦術的成功が、長期的には敵の結束を強めるなど逆効果になり得るため、軍事的合理性だけで評価しにくい。
+
+情報環境の変化は、心理戦や宣伝を「付随物」から「中心課題」へ近づけた。SNS上の拡散は速度が速い一方、真偽の判定が遅れやすく、短期の印象操作が政策空間に影響し得る。認知領域をめぐる競争は、軍事組織だけで完結せず、メディア、民間企業、選挙制度、教育といった社会制度に連動する。戦争が社会全体の動員であった総力戦の時代とは異なる形で、戦争と社会の境界が再び薄くなっている。
+
+### 10. 学問分野としての戦争・戦略・戦術：方法論と批判的視点
+
+戦争・戦略・戦術の研究は、戦史や軍事学だけでなく、国際政治学、経済学、心理学、法学、倫理学にまたがる。伝統的な戦史研究は、史料批判と文脈理解を強みにし、偶然や組織文化、指揮官の認知を丁寧に扱える一方、一般化には慎重さが要る。ケーススタディは政策と教育に役立つが、成功例の「模倣」や、原因の取り違え（相関を因果と誤認する）によって「教訓の誤用」を招きやすい。特に、勝者の史料が残りやすい点、宣伝や回顧録が混入する点は、分析の前提として意識されるべきである。
+
+一方、定量分析やシミュレーション、ウォーゲームは、前提を明示し比較可能性を高める手段として発展した。ランチェスターの法則（1916年）や第二次大戦期のオペレーションズ・リサーチ、プロイセンのクリクシュピール（1820年代）に由来する戦争ゲームは、複雑な現実を抽象化して検討する。しかし抽象化は必然的に重要な要素を落とし、モデルは前提が変わると結論も変わる。モデルが政策の権威付けに使われるとき、前提の政治性が見えにくくなる危険がある。
+
+定量的研究では、国家間戦争や内戦のデータ化が進み、相関の検討や予測の試みが広がった。リチャードソン『致死的争いの統計』（1960年）や、Correlates of War（1960年代に開始）などは、戦争を「測れる対象」として扱う方向を開いたが、定義（何を戦争と数えるか）と測定（死者数、期間、介入の扱い）に争いが残る。数値化は比較を可能にする一方、現地の政治文脈や当事者の意味付けを薄めることがあり、質的研究との補完が必要になる。
+
+最後に、戦争研究は倫理と政治から切り離せない。アウグスティヌスやトマス・アクィナスに遡る正戦論の系譜、ウォルツァー『正義なき戦争』（1977年）のような現代的議論、国際人道法の発展は、武力行使を無制約の手段としないための枠組みを提供する。他方で、正当化の言説はしばしば対立の激化に動員され、民間人被害や占領統治の責任が曖昧化することもある。戦争・戦略・戦術の「知」は、戦うための技術であると同時に、戦争を避ける可能性や、避けられない場合に被害を抑える可能性を検討する知でもあり、その両義性を意識することが求められてきた。
