--- a/1-哲学/14-心理学/141／146-各種の心理学/141-普通心理学．心理各論/141.3-学習．記憶/141.34-記憶．記憶術/141.34-記憶．記憶術.md
+++ b/1-哲学/14-心理学/141／146-各種の心理学/141-普通心理学．心理各論/141.3-学習．記憶/141.34-記憶．記憶術/141.34-記憶．記憶術.md
@@ -8,6 +8,152 @@
 
 <!--
 アウトライン
-- 1.
-- 2.
+- 1. 射程の整理：記憶研究・応用・記憶術をどう接続するか
+  - 記憶＝符号化・保持・検索と再構成の過程／記憶術＝それらに介入する訓練・方略
+  - 成績（保持量）だけでなく、誤り・確信・想起のしやすさ（検索容易性）も評価対象になる
+  - 実験・臨床・教育・司法など、文脈が変わると「よい記憶」の定義も変わる
+- 2. 前史：哲学・修辞学・教育における「記憶」概念の形成
+  - アリストテレス『記憶と想起について』にみる想起の連合・時間性の議論
+  - 修辞学における記憶（シモニデス伝説、キケロ／クインティリアヌス）と、暗誦・訓練の文化
+  - 文字・書物・索引の普及が「内的記憶／外部記憶」の役割分担を変えていく（印刷術以後）
+- 3. 近代の心的メカニズム観：連合主義と経験論が作った説明枠組み
+  - ロック、ヒュームなどの観念連合が、記憶を学習・習慣の問題として整理する
+  - 19世紀の教育・訓練論争（暗記偏重批判と反復訓練の擁護）が、応用研究の前提になる
+  - 記憶術が大衆教育・自己啓発として流通し、経験則と誇張広告の混在が起こりうる
+- 4. 実験心理学の成立：測定可能な記憶へ（19世紀末）
+  - ヘルマン・エビングハウス『記憶について』（1885年）：無意味綴り、忘却曲線、節約法による定量化
+  - 反復回数・間隔・遅延といった操作が、記憶の法則（経験則）として整理される
+  - 研究対象が「方法（記憶術）の巧拙」から「過程（保持・忘却）の一般性」へ移っていく
+- 5. 20世紀前半：干渉・学習理論・技能の研究が広げた射程
+  - 行動主義と学習研究が、保持と忘却を強化・習慣・干渉の観点から扱う
+  - レトロアクティブ／プロアクティブ干渉など、忘却の説明が「衰退」以外のモデルを持つ
+  - 戦争・教育・産業の要請が、技能学習・訓練・選抜（テスト）を通じて記憶研究を押し広げる
+- 6. 再構成としての記憶：意味・文脈・社会性（20世紀前半〜）
+  - フレデリック・バートレット『想起』（1932年）：スキーマ、物語化、文化的前提が想起を形づくる
+  - 「記憶は保存ではなく構成」という見方が、目撃証言・伝聞・学習理解にも波及する
+  - 正確さと理解のトレードオフ（要約・一般化）が、研究と応用の両方で問題になる
+- 7. 認知革命：記憶の構造モデルと方略研究（1950年代〜）
+  - アトキンソン＝シフリン（1968年）の多貯蔵モデル、作業記憶（バドリー＝ヒッチ、1974年）
+  - タルヴィングのエピソード記憶／意味記憶、処理水準（クレイク＆ロックハート）などの理論語彙
+  - 方略（リハーサル、組織化、精緻化、イメージ化）が「いつ効くか／何に転移するか」を検討する研究へ
+- 8. 神経心理学・神経科学：記憶のシステムと固定化（20世紀後半〜）
+  - H.M.（1957年）などの症例研究が、海馬と宣言記憶・固定化の関係を示す
+  - 長期増強（LTP：1973年）と可塑性研究が、生物学的説明を与える一方、説明レベルの橋渡しが課題になる
+  - 手続き記憶・情動記憶・睡眠と記憶など、多系統モデルが精緻化される
+- 9. 記憶術・訓練法の再位置づけ：技能としての想起をどう扱うか
+  - 場所法やイメージ連結、語呂合わせなどを、符号化方略／検索手がかりの設計として分析する
+  - 記憶競技や訓練プログラムが広がる一方、一般能力（知能）への転移や持続性には慎重な評価が必要になる
+  - 間隔反復（ライトナー方式、SuperMemo、Anki等）など、学習科学の知見が実践へ組み込まれていく
+- 10. 現代の争点：偽記憶・再固定化・デジタル外部記憶（1990年代〜）
+  - 目撃証言と偽記憶（例：エリザベス・ロフタス）、「回復記憶」をめぐる論争が、記憶の脆弱性を可視化
+  - 再固定化（reconsolidation）や介入研究が、記憶の変更可能性をめぐる倫理・応用（治療／操作）の議論を促す
+  - 検索エンジンやメモアプリ等の外部記憶が、学習・自己理解・「覚える必要」の感覚を再編する
 -->
+
+### 1. 射程の整理：記憶研究・応用・記憶術をどう接続するか
+
+「記憶」という語は、日常語としては「覚えている／忘れた」という結果の感覚を指しやすいが、研究上はより分節された過程として扱われてきた。典型的には、出来事や知識が取り込まれる「符号化」、時間をまたいで保持される「保持」、必要なときに取り出される「検索」に加え、想起がそのままの保存物ではなく、推論や期待と混ざり合って再構成されるという視点が重要になる。どの段階を主に説明しようとするかで、研究の道具立てや評価指標は大きく変わる。
+
+応用の場面では、評価はさらに複雑になる。教育なら「長期にわたって再利用できるか」、技能なら「速さと正確さがどの程度伸びるか」、司法なら「誤りの混入をどれだけ防げるか」、臨床なら「苦痛を減らし生活機能を改善するか」が中心的な関心になる。ここでは保持量だけでなく、誤り（混同・歪曲）や確信の強さ、思い出しやすさ（検索容易性）、手がかりへの依存度といった側面が現実的な問題として立ち上がる。
+
+記憶術は、こうした過程に意図的に介入する技法の総称として位置づけられる。場所法や語呂合わせ、イメージ化や物語化は、符号化を強めたり検索手がかりを設計したりする試みであり、研究史の中では、長く修辞学・教育・自己訓練の技法として発達してきた。一方で、記憶研究は「うまい人の工夫」を記述するだけでなく、誰にどの程度一般化できる規則を抽出できるか、どの条件で効果が変わるかを問うことで制度化してきた。両者は同じ語を共有しつつ、目的と検証の作法が一致しないことが多い。
+
+加えて、記憶は「何が起きたか」だけでなく「どれだけ確かだと思うか」と結びつくため、測定の設計そのものが争点になりやすい。たとえば、再認課題と再生課題では要求される処理が異なり、同じ学習でも成績のパターンが変わることがある。確信と正確さのずれ、思い出せる感覚（既知感）と内容の正しさのずれは、司法や臨床の文脈で特に深刻な含意を持つ。研究史における「記憶の進歩」は、こうした指標の違いを踏まえた上での進歩として理解する必要がある。
+
+### 2. 前史：哲学・修辞学・教育における「記憶」概念の形成
+
+古代の思想は、記憶を単なる貯蔵庫ではなく、時間と自己の連続性に関わる能力として捉えた。アリストテレスは『記憶と想起について』で、記憶（mnemē）と想起（anamnēsis）を区別し、想起を連合にもとづく探索として説明しようとした。ここには、後に心理学で反復される「手がかりを辿って取り出す」という発想の原型がある。
+
+同時に、修辞学の伝統は、記憶を公共的実践の一部として組み込んだ。弁論の技法では、構想・表現と並んで「記憶」が重要な構成要素とされ、シモニデスに帰される逸話を起点に、場所とイメージを結びつける場所法が語られる。キケロ『弁論家について』やクインティリアヌス『弁論家の教育』は、記憶を鍛える訓練として具体的に論じ、記憶術が「能力の強化」だけでなく「秩序立て」と「検索の経路設計」に関わることを示唆した。
+
+古代末期から中世にかけては、記憶は修辞学にとどまらず宗教的・倫理的実践と結びついて扱われた。アウグスティヌス『告白』では記憶が自己理解の舞台として描かれ、修道院文化では聖句暗記や黙想のためのイメージ操作が工夫された。いわゆるアルス・メモリア（記憶の技芸）は、説教の構成や徳目の整理にも用いられ、「何を心に置くべきか」という規範と不可分だった。この系譜は、近代以降の効率志向の訓練法とは目的が異なり、記憶術の歴史が単純な「科学化」に回収されにくい背景にもなっている。
+
+しかし、記憶は常に内的訓練だけで担われたわけではない。書物・索引・辞書・カードといった外部の記録技術は、知の保持と検索のやり方を変える。印刷術以後、知識が大量に流通し参照可能になるにつれて、暗誦の必要性は相対化される一方、情報を整理し、必要時に引き出す技能は別の形で重要性を増した。ここで「内的記憶」と「外部記憶」の分業が進み、記憶の価値づけが状況に応じて揺れ動く土台が形成された。
+
+### 3. 近代の心的メカニズム観：連合主義と経験論が作った説明枠組み
+
+近代の経験論は、記憶を「魂の徳」から「心的メカニズム」へと移し替える方向を強めた。ジョン・ロックは経験が観念を形成し、それが結びつく過程に注意を向け、デイヴィッド・ヒュームは観念連合を類似・隣接・因果といった原理として整理した。こうした連合主義的発想は、後に学習理論や連想記憶のモデルに引き継がれ、記憶を説明可能な規則の集合として扱う下地となった。
+
+18〜19世紀には、デイヴィッド・ハートリーが神経振動の仮説と観念連合を結びつけ、ジェームズ・ミルやアレクサンダー・ベインが連合の積み重ねとして心的生活を説明しようとした。これらは今日の基準から見れば素朴な部分も多いが、記憶を「経験の痕跡」と「結合の強さ」の問題に落とし込む枠組みを提供した点で、のちの実験的研究が問いを立てる足場になった。
+
+この流れを現象学的記述と概念整理で橋渡しした代表例が、ウィリアム・ジェームズ『心理学原理』（1890年）である。ジェームズは一次記憶（意識に保持される現在の幅）と二次記憶（過去として想起される記憶）を区別し、保持の容量や時間感覚と、想起の確からしさや連想の働きを同じ枠で論じた。これは後の短期・長期の区別を直接に導いたというより、「時間経験としての記憶」と「処理機構としての記憶」を往復する視点を提示した点で、近代心理学が扱う問いの幅を広げた。
+
+ただし、近代化は記憶に対する評価を一様に高めたわけではない。19世紀の教育改革や教授法の議論では、暗記偏重への批判と、基礎訓練としての反復の必要性が衝突した。ここで「覚えること」が思考や理解と対立するものとして語られやすくなり、記憶訓練（記憶術）もまた、実証的根拠より宣伝や成功談で流通する余地を持つようになる。記憶をめぐる議論が、科学・教育・市場の交差点に置かれる構図ができた。
+
+### 4. 実験心理学の成立：測定可能な記憶へ（19世紀末）
+
+記憶研究を近代心理学の中心課題として制度化した象徴が、ヘルマン・エビングハウスの『記憶について』（1885年）である。エビングハウスは無意味綴りを材料に、学習に必要な反復回数や時間経過による保持の変化を測定し、忘却曲線として整理した。さらに、再学習に要する手間の減少を「節約」として定義し、完全に想起できない場合でも保持を数量化する工夫を示した。ここで記憶は、個人の「得意不得意」ではなく、操作可能な条件に応じて変化する現象として扱われる。
+
+もっとも、無意味綴りは「意味理解」や既有知識の影響を最小化する反面、日常記憶からは距離がある。20世紀初頭の研究は、この制約を補う方向でも進んだ。ゲオルク・エリアス・ミュラーとアルフォンス・ピルツェッカーは、学習直後の妨害が保持を損なうことを示し（1900年）、固定化という観点を強めた。練習間隔（後に「間隔効果」として再検討される）や反復の配列、材料の意味性といった要因は、エビングハウスが切り出した測定枠組みの中で、より現実的な学習条件へと拡張されていった。
+
+この時期の意義は、記憶が「測れる」だけでなく、「同じ手続きで再現できる」対象になった点にある。反復の間隔、学習量、遅延時間、材料の意味性といった要因が、経験談ではなく実験変数として導入される。忘却も、単なる怠慢や道徳的欠陥ではなく、競合や干渉、手がかりの欠如など、複数の説明候補を立てて比較できる問題へと変わっていった。
+
+記憶術との関係で言えば、技法の「巧妙さ」を語る段階から、効果がどの条件で立ち上がるか、持続するか、別材料に転移するかを問う段階へ移ったと言える。つまり、記憶術が示してきた経験則を、一般化可能な規則として取り出す道が開かれた一方で、技法の価値は「劇的な一発の成績」ではなく、比較と再現に耐えるかたちで測り直されることになった。
+
+### 5. 20世紀前半：干渉・学習理論・技能の研究が広げた射程
+
+20世紀前半の心理学では、記憶は学習理論の中心問題として扱われ、保持と忘却の説明が多様化した。エドワード・ソーンダイクの試行錯誤学習（1898年）や「効果の法則」は、学習を反応の結合強化として捉える方向を後押しし、行動主義の潮流では、内省ではなく観察可能な成績変化として記憶を扱うことが推奨された。イワン・パブロフの条件反射研究（1900年代初頭）は、連合形成の実験的モデルとして参照され、学習と記憶の境界を相互に近づけた。
+
+忘却の説明として特に重要になったのが干渉である。新しい学習が古い学習の想起を妨げるレトロアクティブ干渉、古い学習が新しい学習を妨げるプロアクティブ干渉といった区別は、忘却を「時間が経つから薄れる」という単線的説明から切り離し、競合する痕跡や反応が想起を妨げるという見方を強めた。こうした発想は、学習順序や練習配列の設計（どの順番で何を学ぶか）に直結し、教育や訓練の現場で実務的な関心を集めた。
+
+この時期には、言語材料を用いた系列学習・対連合学習などの実験課題が整備され、誤反応の分析や系列位置効果（初頭効果・新近効果）といった現象が体系的に扱われた。睡眠と忘却をめぐっては、ジェンキンズとダレンバッハが、睡眠中の保持が相対的に良いのは「睡眠が強化する」からというより「覚醒中の干渉が少ない」からかもしれないと示唆し（1924年）、干渉モデルを補強した。忘却を衰退だけで説明しきれないという問題意識は、短期保持の研究や注意研究へも波及していく。
+
+また、戦争・産業化・教育の大規模化は、技能訓練、適性検査、作業効率の向上といった課題を通じて、記憶研究の応用圧力を高めた。ここでは、単語や綴りの保持だけでなく、手順の習得、注意配分、反応時間、誤反応の減少などが研究対象となり、記憶は「知識の保存」から「行為の安定化」へと射程を広げる。結果として、記憶研究は学習心理学・技能研究・教育心理学と相互に影響しながら発展していった。
+
+### 6. 再構成としての記憶：意味・文脈・社会性（20世紀前半〜）
+
+一方で、記憶を「痕跡の強さ」だけで説明することへの異議も強まった。フレデリック・バートレットは『想起』（1932年）で、物語の再生が逐語的再現ではなく、理解の枠組み（スキーマ）に沿って再構成されることを示した。異文化の物語を材料に、細部が合理化されたり、慣れた形式へ置き換わったりする現象は、記憶が知識・期待・価値観と結びついて変形しうることを示唆する。
+
+この視点は、誤りを単なるノイズとして扱うのではなく、誤りそのものが規則的で、理解の仕方や文脈に依存するという論点を導いた。つまり、記憶の問題は「どれだけ残っているか」だけでなく、「何が残り、何が変わるのか」に拡張される。ここでは、要約や一般化が理解にとって有益である一方、出来事の細部に関しては誤りを生むというトレードオフも避けがたい。
+
+同時代の別系統の議論として、モーリス・アルヴァックスは「集団の枠組み」の中で記憶が組織化されると論じ（1920年代）、個人の想起が社会的制度や言語、共有された物語と絡み合うことを強調した。ここで保持されるのは「出来事の写し」ではなく、意味づけされた過去であるという見方は、教育・歴史認識・アイデンティティの議論とも接続する。実験室の方法と同じかたちで扱えるとは限らないが、記憶が社会の中で機能する以上、研究史の中で繰り返し参照される論点になった。
+
+さらに、記憶の社会性が視野に入ると、個人内の機構だけでは説明しにくい現象が増える。伝聞、共同想起、集団の語り直し、権威ある物語への同調など、想起が相互作用の中で変化することは、後に目撃証言研究や社会的記憶の研究へとつながる。記憶は個人の頭の中の出来事であると同時に、言語と関係の中で編集される過程でもあるという理解が広がっていった。
+
+### 7. 認知革命：記憶の構造モデルと方略研究（1950年代〜）
+
+1950年代以降、心理学は「心的過程」を理論的に扱う方向へ舵を切り、記憶研究は情報処理として再編された。ジョージ・ミラーの「マジカルナンバー7±2」（1956年）は短期保持の容量制約を印象づけ、ドナルド・ブロードベント『知覚とコミュニケーション』（1958年）など注意研究の展開は、入力がそのまま貯蔵されるのではなく、選択と処理を経るという前提を強めた。こうした流れの中で、リチャード・アトキンソンとリチャード・シフリンは多貯蔵モデル（1968年）として、感覚貯蔵・短期貯蔵・長期貯蔵の区別と制御過程を提示した。
+
+この時代には、モデルの妥当性を問うための実験課題も拡張された。ジョージ・スパーリングの部分報告法（1960年）は、感覚段階に大量の情報が短時間保持されうることを示唆し、短期保持の議論を「入力直後」の段階へ押し広げた。ブラウン＝ピーターソン課題（1958〜1959年頃）は、保持中の妨害が成績を急速に低下させることを示し、忘却の原因を衰退で捉えるか干渉で捉えるかという論争を刺激した。記憶研究はここで、保存量だけでなく処理の流れと制御を扱う方向を強めていく。
+
+作業の場での保持と操作を説明するために、アラン・バドリーとグラハム・ヒッチは作業記憶モデル（1974年）を提案し、単なる「短期記憶」を超えて、注意配分や複数課題の制御と結びつけた。エンデル・タルヴィングはエピソード記憶と意味記憶の区別（1972年）を通じて、個人的出来事の想起と知識の保持が異なる性質を持つことを整理した。クレイクとロックハートの処理水準理論（1972年）は、保持が貯蔵場所よりも処理の深さ（意味処理など）に依存する可能性を示し、学習法の設計に影響を与えた。
+
+さらに、想起が「手がかり」と不可分であるという観点が強まり、符号化と検索の適合（エンコーディング特異性：タルヴィングとトムソン、1973年）といった概念が、何が思い出せるかを状況依存の問題として位置づけた。これは、単に深く処理すれば常に良いという単線的理解を相対化し、課題に合った処理（転移適切処理）や、検索そのものが学習を強める可能性（テスト効果／検索練習）へ関心を広げた。間隔をあけた反復が有利だという古くからの経験則も、情報処理の枠組みの中で再検討され、学習法の評価が「覚えた気になる」即時成績から、遅延後の検索成績へと重心を移していく。
+
+この時期、記憶術は「特殊な技」から、一般的な方略研究の中へ取り込まれやすくなる。リハーサル、組織化、精緻化、イメージ化は、符号化の強化や検索手がかりの生成として再記述できるためである。重要なのは、方略が常に万能ではなく、材料の性質、学習者の知識、課題要求によって効果が変わるという点で、研究は「どれが一番効くか」ではなく、「いつ・なぜ効くか」へ重心を移した。ここで記憶研究は、モデルと介入の往復運動を強めていく。
+
+### 8. 神経心理学・神経科学：記憶のシステムと固定化（20世紀後半〜）
+
+記憶研究に決定的な転回をもたらしたのは、脳損傷例と神経科学の成果である。1957年、スコヴィルとミルナーによる症例報告で知られる患者H.M.は、両側内側側頭葉の手術後に新しい出来事を長期に保持できなくなった一方、技能学習の一部は改善しうることが示され、記憶が単一能力ではないという理解を強めた。後に、宣言記憶と手続き記憶、あるいはエピソード記憶と技能の学習が異なる神経基盤を持つという多系統モデルが整備され、心理学的区別が生物学的根拠と結びつけられていく。
+
+この方向は、いわゆる「潜在記憶」やプライミングの研究とも結びついた。本人が思い出したという自覚を持たなくても成績が改善する現象は、想起の意識性を前提にした伝統的な記憶観を揺さぶり、記憶を「意識に上る内容」だけで定義できないことを示した。神経心理学では、健忘の患者でも一部の課題では学習が成立することが積み重ねられ、記憶の区分がより精緻化された。1990年代以降は脳画像法の普及によって、課題に応じた脳活動の差が観察されるようになり、認知モデルと神経基盤の対応づけが進む一方、単純な一対一対応を避ける慎重さも求められるようになった。
+
+理論面では、宣言的（陳述可能）な記憶と非宣言的な記憶を区別する枠組みが整えられ、エピソード・意味の区分、技能学習、条件づけ、プライミングなどが「別の系」として整理されていった。症例研究でも、出来事の新規学習が困難でも、手続き的技能が伸びる例や、逆に特定の知識領域に限った障害などが報告され、記憶の分類は経験的に細分化されていく。こうした多系統モデルは、万能の「記憶力」という直観を疑う方向へ研究史を押し進めた。
+
+固定化（consolidation）という概念も、実験と神経科学の両面から再検討された。学習直後の痕跡が時間とともに安定化するという考えは早くから存在したが、20世紀後半には、海馬系と新皮質の役割分担、睡眠が保持に与える影響、情動が記憶を強めたり歪めたりする条件など、より具体的な議論が積み重なった。シナプス可塑性の研究では、ブリスとロモが報告した長期増強（LTP、1973年）が、学習・記憶の生理学的候補メカニズムとして強い注目を集めた。
+
+ただし、脳内機構の説明が直ちに心理学的現象の説明に置き換わるわけではない。どのレベルの記述が、どの種類の問い（なぜ忘れるか、どう学ぶとよいか、誤りはなぜ起きるか）に答えるのかは一致しないことが多い。神経科学の成果は、記憶が多層的な対象であることを明確にする一方で、説明レベルの橋渡し（行動→認知→神経）をどう行うかという方法論的課題も浮上させた。
+
+### 9. 記憶術・訓練法の再位置づけ：技能としての想起をどう扱うか
+
+記憶術は長い歴史を持つが、現代の研究史の中では、方略・訓練・専門技能として再評価されてきた。場所法（いわゆる記憶宮殿）やイメージ連結、語呂合わせは、覚えにくい材料に意味・構造・手がかりを付与する工夫であり、符号化と検索の設計として解釈できる。とりわけ場所法は、順序づけと検索経路を明確にする点で、想起成績を大きく改善しうることが多くの報告で示されてきた。
+
+記憶術が研究史の中で注目を集めた契機の一つに、アレクサンドル・ルリヤが報告した並外れた記憶能力者の事例がある。ルリヤは『ある記憶術者の精神』（1968年）で、共感覚的なイメージ連鎖が豊富な想起を支える一方、抽象化や忘却の困難さといった副作用も含むことを描き、記憶の「強さ」が常に望ましい結果だけをもたらすわけではないことを示唆した。これは、記憶術の評価が単なる成績比較ではなく、生活機能や思考との関係を含む問題であることを可視化した点で象徴的である。
+
+一方、記憶訓練を評価する際には、成績の向上が「訓練した課題に特化した技能」なのか、「より一般的な能力」へ広く波及するのかを区別する必要がある。記憶競技の世界では、短時間で大量の情報を正確に想起する技能が競われ、1991年には世界記憶選手権が始まったが、そこで用いられる方略は特定の材料（数字、カード、単語列）に最適化されていることが多い。訓練の効果が他領域へどの程度転移するかについては、肯定的な報告も否定的な報告もあり、少なくとも一律に一般化できると断言するのは難しい。
+
+教育実践に近い領域では、派手な記憶術よりも、反復の配列や検索練習といった原理の方が広く適用されやすい。セバスチャン・ライトナーのシステム（1970年代）に代表される間隔反復は、学習項目を忘れかけた頃に再提示することで保持を効率化する考え方で、1980年代以降のSuperMemoなどのソフトウェア、さらにAnkiのようなアプリによって日常的実践に組み込まれていった。ここでも重要なのは、道具や技法そのものより、どの条件で効果が伸び、どの条件で破綻するのか（負荷、継続性、理解との統合）を検討する姿勢である。
+
+### 10. 現代の争点：偽記憶・再固定化・デジタル外部記憶（1990年代〜）
+
+1990年代以降、記憶研究の社会的な注目を高めたのは、目撃証言や偽記憶の問題である。エリザベス・ロフタスらの研究は、誘導的な質問や情報提示が想起内容や確信に影響しうることを示し、記憶の脆弱性が司法や報道の現場で具体的なリスクとして認識される契機となった。また、虐待などの「回復記憶」をめぐる論争では、実際の被害の存在と、治療や面接によって誤った記憶が形成されうる可能性が同時に問題化し、記憶の扱いに慎重な手続きが求められるようになった。
+
+実験心理学の内部でも、偽記憶は特定の文脈に限られた例外ではなく、一般的な記憶過程の帰結として扱われるようになった。たとえば、連想構造にもとづいて「提示されていない単語」を想起・再認してしまうパラダイム（Deeseの研究に端を発し、1995年にローディガーとマクダーモットが再提示した手続き）は、意味的な結びつきが強いほど誤りが生じうることを示した。ここでは、誤りは注意不足というより、意味処理や推論がうまく働くがゆえに生じる側面もあり、「記憶の欠陥」を単純に非難できない複雑さがある。
+
+神経科学の側では、再固定化（reconsolidation）の議論が、記憶が想起のたびに更新されうるという観点を強めた。2000年頃には、想起後の記憶が一時的に不安定化し、介入によって変化しうる可能性が示され、恐怖記憶の減弱など治療的応用への期待も語られた。しかし、どの記憶がどの条件で再固定化の影響を受けるか、臨床的にどこまで安全かつ再現的に適用できるかは、単純化しにくい問題であり、倫理的含意（治療と操作の境界、同意、長期影響）も含めて継続的な検討が必要になる。
+
+臨床応用の文脈では、薬理学的介入（例：プロプラノロールを用いた情動反応の弱化）や、想起と再学習を組み合わせた手続きが検討されてきたが、効果の大きさや持続性、適用範囲にはばらつきが報告されている。記憶の「編集可能性」を強調しすぎると、個人の経験の真正性や責任の扱いに波及する懸念も生じるため、研究成果の解釈と社会実装の距離を丁寧に見極める必要がある。
+
+さらに、デジタル技術は「外部記憶」を日常の前提にした。検索エンジン、クラウド、メモアプリ、リマインダーは、保持より検索に重心を移す生活様式を後押しし、何を覚えるべきか、どこまで覚えなくてよいかという感覚を再編する。学習の場面でも、反復学習アプリや個人ログの蓄積が当たり前になる一方、依存や過信、情報の信頼性、プライバシーといった別種の問題も生じる。現代の記憶研究は、脳内機構から社会制度・技術環境までを含む広い射程の中で、「覚える／忘れる」の意味そのものを問い直す局面に入っている。
+
+この点を具体化する研究として、情報そのものより「どこで見つけられるか」を覚えやすくなる傾向（いわゆる“検索可能性”が記憶方略を変える現象）が指摘され、外部記憶が認知の配分を変える可能性が議論されてきた。さらに、ライフログや自動撮影装置のように「忘れない外部記録」を増やす技術は、想起の支援になる一方で、過去の固定化や、関係者の同意・プライバシー、記録が持つ権力性といった問題も伴う。外部記憶の拡張は、記憶研究を「個人の頭の中」から制度と技術の問題へと押し広げ続けている。
